SERVER-50831 initialize accumulator_js_reduce scalar field in constructor